# miniIsosurface

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  genSetting.xml  isosurface_paper.tex  reference
MC_mergemp/: Makefile  main.cpp
MC_mergemp/Algorithm/: DuplicateRemover.cpp  buildMesh.h  gradients.cpp  gradients.h  marchBlock.cpp  pointCount.cpp  pointCount.h
MC_mergemp/Implementations/: MergeMPAlgo.cpp  MergeMPAlgo.h  openmp.cpp  openmp.cxx  openmp.h
MC_mergemp/User_Interface/: MPterface.cpp  MPterface.h
MC_mpi/: .cproject  Makefile  main.cpp
MC_mpi/Algorithm/: DuplicateRemover.cpp  DuplicateRemover.h  buildMesh.h
MC_mpi/Implementations/: MpiAlgo.cpp  MpiAlgo.h
MC_mpi/src/: MC_mpi.cpp
allmps/: .cproject  CMakeLists.txt  minirun.sh~
allmps/Implementations/: .#MallAlgo.cpp  MallAlgo.cpp
common/: .cproject  Makefile  includes.h  types.h
common/Algorithm/: #gradients.cpp#  .#gradients.cpp  BlockMarchFunctor.cpp  BlockMarchFunctor.h  EdgeIndexer.cpp  EdgeIndexer.h  Image3DReader.cpp  Image3DReader.h  MarchAlgorithm.cpp  MarchAlgorithm.h  Ranges.h  gradients.cpp  gradients.h  serial.cxx  serial.h  serial_test.cxx  serialtest
common/Constants/: MarchingCubesTables.h  TypeInfo.h
common/Data_Obj/: Image3D.cpp  Image3D.h  ImageBlock.cpp  ImageBlock.h  MapReverse.cpp  MapReverse.h  ParallelSort.cxx  TriangleMesh.cpp  TriangleMesh.h  Triplet.cpp  Triplet.h
common/GeneralContext/: GeneralContext.cpp  GeneralContext.h
common/IO/: LineStream.h  LoadBigImage.cpp  LoadBigImage.h  LoadImage3D.h  LoadImage3DMPI.cpp  LoadImage3DMPI.h  LoadImage3DMPI_test.cxx  SaveTriangleMesh.h  iotest
common/Reporting/: IO_errors.h  MPI_errors.h  RunTime_errors.h  Timer.cpp  Timer.h
common/RuntimeData/: MCdata.cxx  MCdata.h  RuntimeData.cpp  RuntimeData.h
common/User_Interface/: UI.cpp  UI.h
flyingEdges/: CMakeLists.txt  README.md
flyingEdges/cuda/: CMakeLists.txt  CudaMarchingCubesTables.h  FlyingEdgesAlgorithm.cu  FlyingEdgesAlgorithm.h  dump.cu  main.cu
flyingEdges/openmp/: CMakeLists.txt  FlyingEdgesAlgorithm.cpp  FlyingEdgesAlgorithm.h  main.cpp
flyingEdges/serial/: CMakeLists.txt  FlyingEdgesAlgorithm.cpp  FlyingEdgesAlgorithm.h  main.cpp
flyingEdges/thrust/: CMakeLists.txt  CudaMarchingCubesTables.h  LoadImage.h  MarchingCubesTables.h  SaveTriangleMesh.h  config.h  main.cu  structs.h
flyingEdges/util/: ConvertBuffer.h  Errors.h  FlyingEdges_Config.h  Image3D.cpp  Image3D.h  LoadImage.h  MarchingCubesTables.h  Timer.cpp  (+3 more)
kokkos/: Makefile  README.md  main.cpp
marchingCubes/: CMakeLists.txt  README.md
marchingCubes/kokkos/: Makefile  README.md  main.cpp
marchingCubes/mpi/: CMakeLists.txt  README.md  main.cpp  mpi_size_type.h  mpiutil.h
marchingCubes/obsolete/allmps/: CMakeLists.txt  Makefile
marchingCubes/obsolete/common/: Makefile
marchingCubes/obsolete/common/Algorithm/: BlockMarchFunctor.h  MarchAlgorithm.cpp  MarchAlgorithm.h
marchingCubes/obsolete/common/Data_Obj/: TriangleMesh.h
marchingCubes/obsolete/common/GeneralContext/: GeneralContext.cpp
marchingCubes/obsolete/common/IO/: LoadImage3DMPI.cpp
marchingCubes/obsolete/common/Reporting/: Log.h  Timer.cpp  Timer.h
marchingCubes/obsolete/common/User_Interface/: UI.cpp  UI.h
marchingCubes/obsolete/dataGen/: main.cpp
marchingCubes/obsolete/mpi/: Makefile
marchingCubes/obsolete/mpi/Implementations/: MpiAlgo.cpp
marchingCubes/obsolete/serial/: CMakeLists.txt
marchingCubes/openmp/: CMakeLists.txt  README.md  main.cpp
marchingCubes/openmpAndMpi/: CMakeLists.txt  README.md  main.cpp
marchingCubes/openmpDupFree/: CMakeLists.txt  README.md  main.cpp
marchingCubes/serial/: CMakeLists.txt  README.md  main.cpp
marchingCubes/util/: ConvertBuffer.h  DuplicateRemover.h  Image3D.cpp  Image3D.h  LoadImage.h  MarchingCubesTables.h  SaveTriangleMesh.h  Timer.h  TriangleMesh.h  TypeInfo.h  util.h
marching_cubes_allMPs/: Makefile  main.cpp  threadMesh.3071  threadMesh.383  threadMesh.767
marching_cubes_openmp/: .cproject  Makefile  fullrun.sh~  main.cpp  yaml_out.yaml2015:08:10-14:14:49.yaml  yaml_out.yaml2015:08:10-14:15:14.yaml
marching_cubes_serial/: .cproject  Makefile  main.cpp
mergemp/: .cproject  CMakeLists.txt  Makefile  fullrun.sh~  main.cpp
mergemp/Algorithm/: DuplicateRemover.cpp  DuplicateRemover.h
mergemp/Implementations/: MergeMPAlgo.cpp  MergeMPAlgo.h
mpi/: .cproject  CMakeLists.txt  main.cpp  mpiutil.h
mpi/Implementations/: MpiAlgo.cpp
obsolete/: CMakeLists.txt
obsolete/allmps/: main.cpp
obsolete/common/: CMakeLists.txt  types.h
obsolete/common/Algorithm/: EdgeIndexer.h  Image3DReader.cpp  Image3DReader.h
obsolete/common/Constants/: TypeInfo.cpp
obsolete/common/Data_Obj/: Image3D.h  TriangleMesh.cpp
obsolete/common/IO/: ConvertBuffer.h  LoadImage3DMPI_test.cxx
obsolete/common/Reporting/: RunTime_errors.h  Timer.cpp
obsolete/dataGen/: CMakeLists.txt  Makefile
obsolete/mergemp/: main.cpp
obsolete/mergemp/Algorithm/: DuplicateRemover.cpp  pointCount.h
obsolete/mpi/: MPIclockFunctions.h
obsolete/openmp/: main.cpp
obsolete/serial/: Makefile  main.cpp
obsolete/serial/Implementations/: SerialAlgo.cpp
openmp/: CMakeLists.txt  Makefile  main.cpp  minirun.sh~
openmp/Implementations/: OpenMPAlgo.cpp
openmpAndMpi/: CMakeLists.txt  main.cpp
openmpDupFree/: CMakeLists.txt  main.cpp
reference/: CMakeLists.txt  Image3D.cpp  Image3D.h  LoadImage.h  SaveTriangleMesh.h  TriangleMesh.h  main.cpp  todo.txt
serial/: #yaml_out.yaml2015:09:11-10:27:31.yaml#  CMakeLists.txt  fullrun.sh~  main.cpp  minirun.sh~
tests/: CMakeLists.txt  README.md  SameContentsCheck.cpp
util/: ConvertBuffer.h  DuplicateRemover.h  IO_errors.h  Image3D.cpp  Image3D.h  LoadImage.h  MarchingCubesTables.h  SaveTriangleMesh.h  Timer.cpp  Timer.h  TriangleMesh.h  TypeInfo.h  util.h
utilities/: CMakeLists.txt
utilities/dataGen/: CMakeLists.txt  main.cpp  open-simplex-noise.c  open-simplex-noise.h
utilities/tests/: CMakeLists.txt  README.md  SameContentsCheck.cpp
utils/: .cproject  Makefile  types.h
vtkReference/: CMakeLists.txt  README.md  main.cpp
(+64 files in other folders)
